<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.ZhouYiActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/zhouyi_img"
            android:scaleType="matrix"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp_20"
            android:textColor="#fff"
            android:text="大家都在买的严选好物"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/zhouyi_text"
            />
        <View
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_1"
            app:layout_constraintTop_toBottomOf="@id/zhouyi_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="#fff"
            android:layout_marginTop="@dimen/dp_10"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_sort"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:layout_constraintTop_toBottomOf="@id/zhouyi_img"
        android:background="#fff"
        >
        <TextView
            android:id="@+id/zhouyi_text1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/zhou_name_zonghe"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/layout_price"
            android:textSize="@dimen/sp_18"/>

        <LinearLayout
            android:id="@+id/layout_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintLeft_toRightOf="@id/zhouyi_text1"
            app:layout_constraintRight_toLeftOf="@id/zhouyi_text3">
            <TextView
                android:id="@+id/zhouyi_text2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/zhou_name_price"
                android:gravity="center"
                android:textSize="@dimen/sp_18"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/dp_3">
                <ImageView
                    android:id="@+id/img_arrow_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_arrow_up_normal"/>
                <ImageView
                    android:id="@+id/img_arrow_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_arrow_down_normal"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/zhouyi_text3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/zhou_name_fenlei"
            android:gravity="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/layout_price"
            android:textSize="@dimen/sp_18"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/zhouyi_recv"
        />
</LinearLayout>