<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/goumai_con"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_shop">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.youth.banner.Banner
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_300"/>
            <!--商品信息-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:background="@color/banner_bottom"
                app:layout_constraintTop_toBottomOf="@id/banner"
                tools:ignore="NotSibling"
                android:id="@+id/cona1"
                >
                <TextView
                    android:id="@+id/texta"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="@dimen/dp_10"
                    android:background="@drawable/shape_car"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/dp_30"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/texta"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="30天无忧退货"
                    android:gravity="center"
                    android:id="@+id/texta1"
                    android:textSize="@dimen/dp_10"
                    />
                <TextView
                    android:id="@+id/textb"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="@dimen/dp_10"
                    android:background="@drawable/shape_car"
                    app:layout_constraintLeft_toRightOf="@id/texta1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/dp_30"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/textb"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="48小时快速退款"
                    android:gravity="center"
                    android:id="@+id/textb1"
                    android:textSize="@dimen/dp_10"
                    />
                <TextView
                    android:id="@+id/textc"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="@dimen/dp_10"
                    android:background="@drawable/shape_car"
                    app:layout_constraintLeft_toRightOf="@id/textb1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/dp_30"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/textc"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="满88包邮费"
                    android:gravity="center"
                    android:id="@+id/textc1"
                    android:textSize="@dimen/dp_10"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="日式和人懒人沙发"
                app:layout_constraintTop_toBottomOf="@id/cona1"
                android:gravity="center"
                android:textSize="@dimen/dp_25"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/dp_20"
                android:id="@+id/rishi_text"
                />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/rishi_text"
                    android:id="@+id/youzhi_text"
                    android:text="优质"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$599"
                    android:textColor="@color/red"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/youzhi_text"
                    android:layout_marginTop="@dimen/dp_20"
                    android:textSize="@dimen/dp_20"
                    android:id="@+id/price_text"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--数量选择区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_car_specs"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/dp_20"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_arrow_rt"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginRight="@dimen/dp_20"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_5"
                android:background="@color/gray_word"/>
            <!--商品评论区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_assess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_car_assess"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/dp_20"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_car_lookall"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginRight="@dimen/dp_20"
                    android:id="@+id/goumai_pinglun_text"
                    android:drawableRight="@mipmap/ic_arrow_rt"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray_word"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_20"/>
            <!--评论内容-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="null"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="@dimen/dp_70"
                    android:layout_marginTop="@dimen/dp_10"
                    android:id="@+id/text_null"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:id="@+id/text_riqi"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dp_18"
                    android:text="好舒服"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/text_null"
                    android:id="@+id/wenzi_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    />

                <ImageView
                    android:id="@+id/pingjia_img"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:layout_marginLeft="8dp"
                    android:scaleType="matrix"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/wenzi_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_5"
                android:background="@color/gray_word"
                android:layout_marginTop="@dimen/dp_5"/>
            <!--商品参数区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="商品参数"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_20"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text3"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:id="@+id/goumai_recv"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--商品详情区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <WebView
                    android:id="@+id/webView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="WebViewLayout"></WebView>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--商品常见问题区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="@dimen/dp_30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_20"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:gravity="center"
                    android:text="————   常见问题  ————"
                    android:id="@+id/text4"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/wenti_recv"
                    app:layout_constraintTop_toBottomOf="@id/text4"

                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--大家都在看的商品区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_shop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView">
        <FrameLayout
            android:id="@+id/layout_collect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/layout_car">
            <ImageView
                android:id="@+id/img_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/wujiaoxingxuanzeqi"
                android:layout_gravity="center"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/layout_car"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toRightOf="@id/layout_collect"
            app:layout_constraintRight_toLeftOf="@id/txt_buy">
            <ImageView
                android:id="@+id/img_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_car"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/txt_number"
                android:layout_width="@dimen/sp_15"
                android:layout_height="@dimen/sp_15"
                android:layout_gravity="center"
                android:text="11"
                android:textSize="@dimen/sp_8"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:gravity="center"
                android:background="@drawable/shape_car_number"
                android:textColor="@color/white"/>
        </FrameLayout>
        <TextView
            android:id="@+id/txt_buy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="立即购买"
            android:textSize="@dimen/sp_20"
            app:layout_constraintLeft_toRightOf="@id/layout_car"
            app:layout_constraintRight_toLeftOf="@id/txt_addCar"/>
        <TextView
            android:id="@+id/txt_addCar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="加入购物车"
            android:textSize="@dimen/sp_20"
            android:background="@color/red"
            app:layout_constraintLeft_toRightOf="@id/txt_buy"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>